# TrashGuyC

./: .gitmodules  CMakeLists.txt  main.c
